# unterricht.python-backend

./: LICENSE  README.md  pyproject.toml
api/: agent_service.py  ai-service.py  ai_service.py  config.py  files-service.py  files_service.py  gunicorn_conf.py  interface.py  prompt_engineering.py
api/config/: interface_config.yaml
llm_faiss_index/: index.faiss  index.pkl
notebooks/: experiment_agents.ipynb  playground.ipynb  playground_agent.ipynb  playground_agent_fine_tuning.ipynb  playground_langchain.ipynb  testing.ipynb
utils/: utils.py
